--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: loan-banking App
 
   datasource:
-    url: jdbc:mysql://localhost:3306/loan_bank_app?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/bank_loan_app?createDatabaseIfNotExist=true
     username: root
     password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -25,8 +25,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 465
-    username: abyolayode5344@gmail.com
-    password: ${mail_password}
+    username: possibleolayode5344@gmail.com
+    password: yxesggihwlwdymdq
     properties:
       mail:
         smtp:
